--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.11",
   "main": "src/index.js",
   "dependencies": {
+    "@jrc03c/js-text-tools": "^0.0.25",
+    "@jrc03c/make-key": "^0.0.14",
     "@jrc03c/pause": "^0.0.3",
     "@jrc03c/vue-component-with-css": "^0.0.6"
   },
